# aiki-xp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.full  LICENSE  README.md  ROADMAP.md  modal_app.py  modal_tier_d_app.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  host_request.yml  scientific_question.yml
aikixp/: __init__.py  champion_registry.py  classical_features.py  embedding_registry.py  extract.py  genome_cache.py  genome_lookup.py  inference.py  sequence_normalization.py  similarity_search.py  train.py
checkpoints/: README.md
configs/: deployment_tiers.yaml  norm_stats_492k.json
data/: README.md
docker/: README.md
docs/: similarity_search_integration.md
docs/seed_discussions/: README.md  general_04_baselines.md  help_01_which_tier.md  help_02_directed_evolution.md  help_03_organism_coverage.md
figures/: _audit_assets.py  _visual_data.py  fig1_dataset.py  fig2_platform.py  fig3_core_results.py  fig5_modality.py  fig6_cross_species.py  fig_comprehensive_external.py  fig_s7_stepwise.py  si_landscape_contamination.py  si_protein_scaling.py  si_synechococcus_and_confounds.py
notebooks/: aiki_xp_colab_quickstart.ipynb
scripts/: backfill_species_keys.py  build_public_dataset.py  build_similarity_index.py  build_supplementary_tables.py  bulk_upload_genomes.py  compute_external_contamination.py  external_validation.py  extract_and_predict.py  predict.py  predict_v21_temporal_holdout.py  prelaunch_smoke.sh  reproduce_showcase_results.py  rescore_on_clean_subset.py
sdk/python/: LICENSE  PUBLISH.md  README.md  pyproject.toml
sdk/python/aikixp_client/: __init__.py  _client.py  _constants.py  _types.py
sdk/python/tests/: test_smoke.py
supplementary_tables/: aikixp_supplementary_tables.xlsx  table_S4_recipe_comparison.xlsx  table_S_bootstrap_cis.xlsx  table_S_contamination.xlsx  table_S_failure_modes.xlsx  table_S_training_fraction_scaling.xlsx
validation/: build_enriched_lookup.py  modal_tier_d_native_ecoli_n50_seed42.json  modal_tier_d_native_ecoli_n50_seed42.py  reproduce_paper_numbers.py
web/: hosts.json  index.html
web/concepts/: gallery.html  prompts.md
